[package]
name = "coinlive"
description = "Interactive command line tool that displays live cryptocurrency prices and simple historical price charts."
version = "0.2.3"
authors = ["Markus Mayer <mmayer@mayeranalytics.com>"]
readme = "README.md"
homepage = "https://github.com/mayeranalytics/coinlive"
repository = "https://github.com/mayeranalytics/coinlive"
documentation = "https://github.com/mayeranalytics/coinlive"
keywords = ["cryptocurrency", "crypto", "charts"]
categories = ["command-line-utilities"]
license = "GPL-3.0-or-later"
edition = "2018"

[[bin]]
name = "coinlive"

[profile.release]
debug = 0
lto = true
opt-level = 3
codegen-units = 1

[dependencies]
url = "2.3"
futures = "0.3"
tokio = {version = "1.25", features=["full"]}
tokio-stream = "0.1"
async-stream = "0.3"
tungstenite = {version="0.18"}
tokio-tungstenite  = {version="0.18", features=["native-tls"]}
tokio-stdin-stdout = "0.1"
futures-util = "0.3"
http_req  = {version="0.9", default-features = false, features = ["rust-tls"]}
tui = { version = "0.19", default-features = false, features = ["termion"] }
termion = "2.0"
chrono = "0.4"
dec = "0.4"
inlinable_string = "0.1"
clap = "4.1"
serde = {version="1.0", features = ["derive"]}
serde_json = {version="1.0"}
version = "3.0"